add new package and files

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@
   display: flex;
   background-color: gray;
 }
+
+.pdfpage {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  /* user-drag: none; */
+}
