--- a/src/dragNdrop/source.css
+++ b/src/dragNdrop/source.css
@@ -25,7 +25,7 @@
     /* border: 1px dashed #eee;  */
     height: 60px; 
     width: 62px;  
-    background-image: url(sign2.png);
+    background-image: url(signature.png);
     background-size: cover;
     background-color: black;
 }
