--- a/src/popupModals/signModal.css
+++ b/src/popupModals/signModal.css
@@ -17,3 +17,18 @@
   height: 50px;
   background-color: white;
 }
+
+.chooseContainer {
+  width: 100%;
+  height: 100%;
+  padding: .5rem;
+ background-color: aliceblue;
+}
+.boxshadowEffect1{
+	-webkit-box-shadow: 0 8px 6px -6px #777;
+	   -moz-box-shadow: 0 8px 6px -6px #777;
+          box-shadow: 0 8px 6px -6px #777;
+}
+.boxshadowEffect1:hover {
+  box-shadow: 0 5px 5px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
+}
